<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">NUS Buddy</string>

    <!-- Action bar -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- Misc -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_test">Login Test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_nusivle">NUSIVLEActivity</string>
    <string name="title_activity_nusivleactivity2">NUSIVLEActivity2</string>

    <!-- Login Screen -->
    <string name="EditText_userid_hint">IVLE UserID</string>
    <string name="EditText_password_hint">Password</string>
    <string name="TextView_login">NUS Buddy</string>
    <string name="title_activity_login">Login</string>
    <string name="Button_login_text">Log in</string>
    <string name="api_key_working">AaqXNkxgYT3xYQR8qQG6Z</string>
    <string name="api_key_mine">3bBGOIdtC1T2d7SXeQAO9</string>

    <!-- Nav Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_name">Navigation</string>

    <string-array name="drawer_item_names">
        <item>Home</item>
        <item>Announcements</item>
        <item>Gradebook</item>
        <item>Final Exams</item>
        <item>Homework Planner</item>
        <item>Tests and Quizzes</item>
        <item>CAP Calculator</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <!-- Home Page Contents -->
    <string name="title_activity_home_page">NUS Buddy</string>
    <!-- Welcome Box -->
    <string name="TextView_welcome_message_default">Hello</string>
    <string name="TextView_welcome_message_morning">Good morning</string>
    <string name="TextView_welcome_message_afternoon">Good afternoon</string>
    <string name="TextView_welcome_message_evening">Good evening</string>
    <string name="TextView_welcome_name_default">NUS student</string>
    <!-- Target Box -->
    <string name="TextView_target_target_message">Target CAP</string>
    <string name="TextView_target_target_value">5.00</string>
    <string name="TextView_target_required_message1">You need to achieve</string>
    <string name="TextView_target_required_value">5.00</string>
    <string name="TextView_target_required_message2">this semester.</string>
    <!-- Homework Box -->
    <string name="TextView_homework_message">Approaching deadlines:</string>
    <!-- Tests Box -->
    <string name="TextView_tests_message">Upcoming tests:</string>

    <!-- Announcements Page Contents -->
    <string name="title_activity_announcements">Announcements</string>
    <string name="TextView_announcements_module_code_default">Module Code</string>
    <string name="TextView_announcements_title_default">Announcement Title - This is a sample announcement meant to test the length of the container. </string>

    <!-- Gradebook Page Contents -->
    <string name="title_activity_gradebook">Gradebook</string>
    <string name="TextView_gradebook_item_name">Item</string>
    <string name="TextView_gradebook_item_marks">Marks</string>
    <string name="TextView_gradebook_item_percentile">Percentile</string>
    <string name="TextView_gradebook_item_grade">Grade</string>
    <string name="TextView_gradebook_item_name_value">Item Name</string>
    <string name="TextView_gradebook_item_marks_value">Marks Value</string>
    <string name="TextView_gradebook_item_percentile_value">Percentile Value</string>
    <string name="TextView_gradebook_item_grade_value">Grade Value</string>

    <!-- Final Exams Page Contents -->
    <string name="title_activity_final_exams">Final Exams</string>
    <string name="TextView_final_exams_exam_date">Date</string>
    <string name="TextView_final_exams_exam_time">Time (24 hrs)</string>
    <string name="TextView_final_exams_exam_session">Session</string>
    <string name="TextView_final_exams_exam_date_value">Date Value</string>
    <string name="TextView_final_exams_exam_time_value">Time Value</string>
    <string name="TextView_final_exams_exam_session_value">Session Value</string>

    <!-- Homework Planner Page Contents -->
    <string name="title_activity_homework">Homework Planner</string>
    <string name="TextView_homework_item_small_value">Homework item</string>

    <!-- Add Homework Page Contents -->
    <string name="title_activity_add_homework">Add Homework</string>
    <string name="TextView_add_homework_description">Description: </string>
    <string name="RadioButton_recur_weekly">Recur weekly</string>
    <string name="RadioButton_odd_week">Odd weeks</string>
    <string name="RadioButton_even_week">Even weeks</string>
    <string name="Button_add_event">Add Event</string>
    <string name="Button_save_edit_event">Save</string>
    <string name="Button_cancel_event">Cancel</string>

    <!-- Test and Quizzes Page Contents -->
    <string name="title_activity_tests_quizzes">Tests and Quizzes</string>
    <string name="Textview_location_header">"\@ "</string>

    <!-- CAP Calculator Page Contents -->
    <string name="title_activity_cap_calculator">CAP Calculator</string>
    <string name="title_activity_view_homework">View Homework</string>

    <string-array name="Grade_options">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>D+</item>
        <item>D</item>
        <item>F</item>
        <item>S/U</item>
    </string-array>
    <string-array name="MC_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string name="button_start">Start!</string>
    <string name="button_add">Add Module</string>
    <string name="button_remove">Remove</string>
    <string name="editText_moduleCode">Module Code</string>
    <string name="textView_calc_instructions">Click the \&quot;Add\&quot; button to add a new module!</string>
    <string name="textView_calc_go">Click \&quot;Go\&quot; to calculate your CAP!</string>
    <string name="button_go">Calculate!</string>
    <string name="textView_cap_name">New CAP: </string>
    <string name="textView_cap_value">0.000</string>
    <string name="textView_modules_name">Modules: </string>
    <string name="editText_old_cap">CAP so far</string>
    <string name="editText_old_credits">MCs so far</string>
    <string name="checkBox_old_cap">Cumulative</string>
    <string name="popup_title">Error!</string>
    <string name="popup_button_cancel">OK</string>
    <string name="popup_empty_cap">Please enter a valid CAP value!</string>
    <string name="popup_empty_mc">Please enter a valid number of MCs!</string>
    <string name="popup_empty_modules">Please add at least one module!</string>
    <string name="popup_high_cap">The input CAP is too damn high.</string>
    <string name="popup_unknown">An unknown error has occurred. Please restart the app.</string>
    <string name="title_activity_add_test">Add Test</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>

</resources>
