<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    
    <TextView
        android:id="@+id/TextView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="16dp" />
    
    <EditText
        android:id="@+id/EditText_userid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText_userid_hint"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/EditText_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/Button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/Button_login_text"
        android:onClick="onClickButtonLogin" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:onClick="next" />

</LinearLayout>
