<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_page_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:id="@+id/activity_main_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/testTitleEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="Test Title"
	        android:inputType="textCapWords" >
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/testLocationEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="Test Location"
	        android:inputType="textCapWords" />
	
	    <LinearLayout
	        android:id="@+id/Layout_date_time"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/dueDateTextView"
	            style="android:editTextStyle"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.5"
	            android:background="?android:attr/editTextBackground"
	            android:clickable="true"
	            android:hint="Date Due"
	            android:onClick="showDatePickerDialog"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/dueTimeTextView"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:background="?android:attr/editTextBackground"
	            android:clickable="true"
	            android:hint="Time Due"
	            android:onClick="showTimePickerDialog"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/descriptionTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/TextView_add_homework_description"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/testDescriptionEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textCapSentences|textMultiLine" />
	
	    <LinearLayout
	        android:id="@+id/Layout_add_cancel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/cancelButton"
	            style="android:buttonBarButtonStyle"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:onClick="cancelButtonPressed"
	            android:text="@string/Button_cancel_event" />
	
	        <Button
	            android:id="@+id/editButton"
	            style="android:buttonBarButtonStyle"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:onClick="editButtonPressed"
	            android:text="@string/Button_save_edit_event" />
	
	        <Button
	            android:id="@+id/addButton"
	            style="android:buttonBarButtonStyle"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:onClick="addButtonPressed"
	            android:text="@string/Button_add_event" />
	
	    </LinearLayout>

	</LinearLayout>
	
</ScrollView>